[package]
edition = "2021"
name = "luaupp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
full_moon = {git = "https://github.com/MobiDev/full-moon.git", features = ["roblox"]}
serde = "1.0.136"
structopt = "0.3.26"
stylua = "0.12.5"
toml = "0.5.8"
